--- a/MelbourneModernApps.iOS/MelbourneModernApps.iOS.csproj
+++ b/MelbourneModernApps.iOS/MelbourneModernApps.iOS.csproj
@@ -132,14 +132,24 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="4.5.0.356" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
+    <PackageReference Include="Xamarin.Forms" Version="4.6.0.494-pre2" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.5.2" />
+    <PackageReference Include="Xamarin.Forms.Visual.Material">
+      <Version>4.6.0.494-pre2</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.iOS.MaterialComponents">
+      <Version>92.0.0</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
     <ProjectReference Include="..\MelbourneModernApps\MelbourneModernApps.csproj">
       <Project>{BFA51BBB-9E92-415C-9303-9751873DCBC1}</Project>
       <Name>MelbourneModernApps</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MelbourneModernApp.Core\MelbourneModernApp.Core.csproj">
+      <Project>{D9C3012C-CD64-4665-9923-53C427129C5B}</Project>
+      <Name>MelbourneModernApp.Core</Name>
     </ProjectReference>
   </ItemGroup>
 </Project>
