--- a/MelbourneModernApps/MelbourneModernApps.csproj
+++ b/MelbourneModernApps/MelbourneModernApps.csproj
@@ -6,7 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="4.5.0.356" />  
-    <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
+    <PackageReference Include="Xamarin.Forms" Version="4.6.0.494-pre2" />  
+    <PackageReference Include="Xamarin.Essentials" Version="1.5.2" />
+    <PackageReference Include="Refractored.MvvmHelpers" Version="1.6.1-beta" />
+    <PackageReference Include="Xamarin.Forms.Visual.Material" Version="4.6.0.494-pre2" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MelbourneModernApp.Core\MelbourneModernApp.Core.csproj" />
   </ItemGroup>
 </Project>
