Added MatBlazor and cleaned up detail page

--- a/MelbourneModernApps.BlazorWasm/MelbourneModernApps.BlazorWasm.csproj
+++ b/MelbourneModernApps.BlazorWasm/MelbourneModernApps.BlazorWasm.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Build" Version="3.2.0-preview3.20168.3" PrivateAssets="all" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="3.2.0-preview3.20168.3" PrivateAssets="all" />
     <PackageReference Include="Microsoft.AspNetCore.Blazor.HttpClient" Version="3.2.0-preview3.20168.3" />
+    <PackageReference Include="MatBlazor" Version="2.3.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MelbourneModernApp.Core\MelbourneModernApp.Core.csproj">
