--- a/MelbourneModernApps/MelbourneModernApps.csproj
+++ b/MelbourneModernApps/MelbourneModernApps.csproj
@@ -14,4 +14,7 @@
   <ItemGroup>
     <ProjectReference Include="..\MelbourneModernApp.Core\MelbourneModernApp.Core.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Converters\" />
+  </ItemGroup>
 </Project>
