Working on presentation page, shouldn't really merge yet

--- a/MelbourneModernApps/MelbourneModernApps.csproj
+++ b/MelbourneModernApps/MelbourneModernApps.csproj
@@ -16,5 +16,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Converters\" />
+    <Folder Include="Views\" />
+    <Folder Include="Controls\" />
   </ItemGroup>
 </Project>
