Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,8 +34,8 @@ steps:
     provProfileSecureFile: 'MelbourneMeetupAdHoc.mobileprovision'
 - task: InstallAppleCertificate@2
   inputs:
-    certSecureFile: 'melbournemeetup.p12'
-    certPwd: '$(p12password)'
+    certSecureFile: 'meetup2.p12'
+    certPwd: '$(p12password2)'
     keychain: 'temp'
 - task: XamariniOS@2
   inputs:
