--- a/MelbourneModernApps.iOS/Info.plist
+++ b/MelbourneModernApps.iOS/Info.plist
@@ -25,7 +25,7 @@
     <key>CFBundleDisplayName</key>
     <string>MelbourneModernApps</string>
     <key>CFBundleIdentifier</key>
-    <string>com.lachlangordon.MelbourneModernApps</string>
+    <string>com.lachlannwgordon.melbournemeetup</string>
     <key>CFBundleVersion</key>
     <string>1.0</string>
     <key>UILaunchStoryboardName</key>
