Update azure-pipelines-android.yml for Azure Pipelines

--- a/azure-pipelines-android.yml
+++ b/azure-pipelines-android.yml
@@ -33,3 +33,13 @@ steps:
     apksignerKeystorePassword: '$(keystorepassword)'
     apksignerKeystoreAlias: 'meetup'
     apksignerKeyPassword: '$(keystorepassword)'
+
+- task: AppCenterDistribute@3
+  inputs:
+    serverEndpoint: 'MeetupAppCenter'
+    appSlug: 'MelbourneXamarinBlazorMeetup/MelbourneMeetupAppDroid'
+    appFile: '$(outputDirectory)/*.apk'
+    symbolsOption: 'Android'
+    releaseNotesOption: 'input'
+    releaseNotesInput: 'Meetup app for android'
+    destinationType: 'groups'
