Added Azure functions project

--- a/MelbourneModernApps.BlazorWasm/MelbourneModernApps.BlazorWasm.csproj
+++ b/MelbourneModernApps.BlazorWasm/MelbourneModernApps.BlazorWasm.csproj
@@ -17,4 +17,7 @@
       <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Remove="Pages\PresenterDetailPage.razor" />
+  </ItemGroup>
 </Project>
