--- a/MelbourneModernApp.Core/MelbourneModernApp.Core.csproj
+++ b/MelbourneModernApp.Core/MelbourneModernApp.Core.csproj
@@ -11,5 +11,6 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Refractored.MvvmHelpers" Version="1.6.1-beta" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.3" />
   </ItemGroup>
 </Project>
