--- a/MelbourneModernApps/MelbourneModernApps.csproj
+++ b/MelbourneModernApps/MelbourneModernApps.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Xamarin.Essentials" Version="1.5.2" />
     <PackageReference Include="Refractored.MvvmHelpers" Version="1.6.1-beta" />
     <PackageReference Include="Xamarin.Forms.Visual.Material" Version="4.6.0.494-pre2" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.3" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MelbourneModernApp.Core\MelbourneModernApp.Core.csproj" />
