--- a/MelbourneModernApps.BlazorWasm/MelbourneModernApps.BlazorWasm.csproj
+++ b/MelbourneModernApps.BlazorWasm/MelbourneModernApps.BlazorWasm.csproj
@@ -17,4 +17,7 @@
       <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
 </Project>
