--- a/MelbourneModernApps/MelbourneModernApps.Forms.csproj
+++ b/MelbourneModernApps/MelbourneModernApps.Forms.csproj
@@ -19,5 +19,6 @@
     <Folder Include="Converters\" />
     <Folder Include="Views\" />
     <Folder Include="Controls\" />
+    <Folder Include="Services\" />
   </ItemGroup>
 </Project>
