--- a/MelbourneModernApps.BlazorWasm/MelbourneModernApps.BlazorWasm.csproj
+++ b/MelbourneModernApps.BlazorWasm/MelbourneModernApps.BlazorWasm.csproj
@@ -11,6 +11,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="3.2.0-preview3.20168.3" PrivateAssets="all" />
     <PackageReference Include="Microsoft.AspNetCore.Blazor.HttpClient" Version="3.2.0-preview3.20168.3" />
     <PackageReference Include="MatBlazor" Version="2.3.0" />
+    <PackageReference Include="Refractored.MvvmHelpers" Version="1.6.2" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.5" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MelbourneModernApp.Core\MelbourneModernApp.Core.csproj">
@@ -19,5 +21,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Services\" />
+    <Folder Include="Pages\" />
   </ItemGroup>
 </Project>
