--- a/MelbourneModernApp.Core/MelbourneModernApp.Core.csproj
+++ b/MelbourneModernApp.Core/MelbourneModernApp.Core.csproj
@@ -10,7 +10,7 @@
     <Folder Include="Services\" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Refractored.MvvmHelpers" Version="1.6.1-beta" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.3" />
+    <PackageReference Include="Refractored.MvvmHelpers" Version="1.6.2" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.5" />
   </ItemGroup>
 </Project>
