--- a/wasm-azure-pipelines.yml
+++ b/wasm-azure-pipelines.yml
@@ -7,6 +7,11 @@ trigger:
  branches:
    include:
    - release/wasm*
+pr:
+  branches:
+    include:
+      - none
+      
 
 variables:
   buildConfiguration: 'Release'
