Fixed binding problem in Presentations Page fixed broken reference

--- a/MelbourneModenApps.Functions/MelbourneModenApps.Functions.csproj
+++ b/MelbourneModenApps.Functions/MelbourneModenApps.Functions.csproj
@@ -15,4 +15,9 @@
       <CopyToPublishDirectory>Never</CopyToPublishDirectory>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MelbourneModernApp.Core\MelbourneModernApp.Core.csproj">
+      <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
+    </ProjectReference>
+  </ItemGroup>
 </Project>
