--- a/MelbourneModernApps.BlazorWasm/MelbourneModernApps.BlazorWasm.csproj
+++ b/MelbourneModernApps.BlazorWasm/MelbourneModernApps.BlazorWasm.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
@@ -22,5 +22,6 @@
   <ItemGroup>
     <Folder Include="Services\" />
     <Folder Include="Pages\" />
+    <Folder Include="wwwroot\css\sass\vendors\" />
   </ItemGroup>
 </Project>
