--- a/MelbourneBlazorXamarin.Forms/MelbourneBlazorXamarin.Forms.csproj
+++ b/MelbourneBlazorXamarin.Forms/MelbourneBlazorXamarin.Forms.csproj
@@ -1,16 +1,24 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <ProduceReferenceAssembly>true</ProduceReferenceAssembly>
+    <RazorLangVersion>3.0</RazorLangVersion>
+    <LangVersion>8.0</LangVersion>
+  </PropertyGroup>
+
+<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DebugType>portable</DebugType>
+    <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="4.6.0.800" />  
+    <PackageReference Include="Xamarin.Forms" Version="4.8.0.1560" />  
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
     <PackageReference Include="Refractored.MvvmHelpers" Version="1.6.2" />
     <PackageReference Include="Xamarin.Forms.Visual.Material" Version="4.6.0.800" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.5" />
+    <PackageReference Include="Microsoft.MobileBlazorBindings" Version="0.5.50-preview" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MelbourneBlazorXamarin.Core\MelbourneBlazorXamarin.Core.csproj" />
@@ -21,4 +29,5 @@
     <Folder Include="Controls\" />
     <Folder Include="Services\" />
   </ItemGroup>
+
 </Project>
