--- a/MelbourneBlazorXamarin.iOS/MelbourneBlazorXamarin.iOS.csproj
+++ b/MelbourneBlazorXamarin.iOS/MelbourneBlazorXamarin.iOS.csproj
@@ -132,7 +132,7 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="4.6.0.800" />
+    <PackageReference Include="Xamarin.Forms" Version="4.8.0.1560" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
     <PackageReference Include="Xamarin.Forms.Visual.Material">
       <Version>4.6.0.800</Version>
@@ -145,6 +145,9 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection">
       <Version>3.1.5</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.MobileBlazorBindings">
+      <Version>0.5.50-preview</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
