--- a/MelbourneBlazorXamarin.BlazorWasm/MelbourneBlazorXamarin.BlazorWasm.csproj
+++ b/MelbourneBlazorXamarin.BlazorWasm/MelbourneBlazorXamarin.BlazorWasm.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Refractored.MvvmHelpers" Version="1.6.2" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
     <PackageReference Include="MatBlazor" Version="2.8.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MelbourneBlazorXamarin.Core\MelbourneBlazorXamarin.Core.csproj">
