--- a/MelbourneBlazorXamarin.Functions/MelbourneBlazorXamarin.Functions.csproj
+++ b/MelbourneBlazorXamarin.Functions/MelbourneBlazorXamarin.Functions.csproj
@@ -6,6 +6,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.11" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
+    <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Storage" Version="4.0.3" />                
+
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
@@ -20,5 +22,8 @@
     <ProjectReference Include="..\MelbourneBlazorXamarin.Core\MelbourneBlazorXamarin.Core.csproj">
       <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Entities\" />
   </ItemGroup>
 </Project>
